...
      scope = scope, drawerState = drawerState, navigationActions = navigationActions) {
        if (selectedHousehold.value == null) {
          LaunchedEffect(Unit) { navigationActions.navigateTo(Screen.FIRST_TIME_USER) }
        } else {
          if (user.value != null) {
            Scaffold(
                modifier = Modifier.testTag("recipesScreen"),
                topBar = {
                  selectedHousehold.value?.let {
                    TopNavigationBar(
                        houseHold = it,
                        onHamburgerClick = { scope.launch { drawerState.open() } },
                        filters = recipesViewModel.filters,
...
                            detectTapGestures(onTap = { recipesViewModel.shrinkFab() })
                          }) {
                        CustomSearchBar(
                            query = query,
                            onQueryChange = { newQuery -> recipesViewModel.changeQuery(newQuery) },
                            placeholder = "Search recipe",
                            searchBarTestTag = "searchBar",
                            onDeleteTextClicked = { recipesViewModel.changeQuery("") })

                        if (filteredRecipeList.isEmpty()) {
                          Box(
                              modifier = Modifier.fillMaxSize(),
                              content = {
                                Text(
                                    text = "No recipes available",
                                    modifier = Modifier.testTag("noRecipesAvailableText"))
                              },
                              contentAlignment = Alignment.Center)
                        } else {
                          // LazyColumn for displaying the list of filtered recipes
                          LazyColumn(modifier = Modifier.fillMaxSize().testTag("recipesList")) {
                            items(filteredRecipeList) { recipe ->
                              RecipeItem(recipe, navigationActions, recipesViewModel)
                            }
                          }
                        }
                      }
...
                  onClick = {
                    recipesViewModel.selectRecipe(recipe)
                    clickOnRecipe = true
                    navigationActions.navigateTo(
                        Screen.INDIVIDUAL_RECIPE) // Navigate to the individual recipe screen
                  }) // Handle clicks on the card
              .testTag("recipesCards")) {
        // Layout for the content inside the card
        Row(
            modifier =
                Modifier.fillMaxWidth() // Fill the width inside the card
                    .padding(2.dp)) {
              // Column for recipe details: name, servings, and time
...
