...
 * @param firstIcon The icon for the secondary FAB. Defaults to Icons.Default.AutoAwesome.
 * @param firstScreenText The text for the secondary FAB. Defaults to "Generate".
 * @param firstScreen The screen to navigate to when the secondary FAB is clicked. Defaults to
 *   Screen.GENERATE_RECIPE.
 * @param secondScreen The screen to navigate to when the primary FAB is clicked. Defaults to
 *   Screen.ADD_RECIPE.
 * @param firstScreenTestTag The test tag for the secondary FAB. Defaults to "generateRecipeFab".
 * @param secondScreenTestTag The test tag for the primary FAB. Defaults to "addRecipeFab".
 * @param foodItemViewModel The ViewModel for managing the state of the food item. Defaults to null.
 */
@Composable
fun ExtendedActionButtons(
    fabExpanded: MutableState<Boolean>,
    navigationActions: NavigationActions,
...
